...
    <string name="show_solution">Show solution</string>
    <string name="hide_solution">Hide solution</string>

    <!-- Chapter components -->
    <string name="code">CODE</string>
    <string name="copy_content">Copy content</string>
    <string name="copy_successful">Code copied to clipboard</string>
    <string name="copy_failed">Failed to copy code</string>
    <string name="advanced">ADVANCED:</string>
    <string name="close_chapter">Close chapter</string>
    <string name="image_component_desc">Image component</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
...
    <string name="playground_output">Output</string>
    <string name="playground_unavailable">Playground unavailable</string>
    <string name="playground_unavailable_info">
        The playground is not available right now. You can try a real development environment in the meantime.
    </string>
    <string name="playground_file_select">Select file</string>
    <string name="playground_new_file">Create new…</string>
    <string name="playground_delete_file">Delete file</string>
    <string name="playground_run">Run</string>
    <string name="playground_create_file_description">Enter the file name!</string>
    <string name="playground_create_file_incorrect">Please use conventional Java class names (Capital first letter, only letters).</string>
    <string name="playground_create_file_hint">file name</string>
    <string name="java_file_extension" translatable="false">.java</string>
    <string name="playground_code_area_hint">Write code here</string>
    <string name="playground_too_many_files">Too many files! Please delete some of them before creating more.</string>
    <string name="playground_delete_main">Main.java can\'t be deleted! Do you want to restore its original contents?</string>
    <string name="playground_delete_normal_file">Are you sure you want to delete this source file?</string>
    <string name="playground_main_reset">Main.java was reset!</string>
    <string name="playground_file_deleted">File deleted!</string>
    <string name="playground_input_info">
        Anything you type here will be sent to the standard input (System.in), in the order it appears here. There is currently no way
        to enter command line arguments.
    </string>
    <string name="playground_input_hint">Enter input here…</string>
    <string name="playground_input_delete">Delete all input</string>
...
