<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".playground.CodeFragment"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:id="@+id/fragment_code_root">

    <!-- Layout for actual code: can displays multiple files -->
    <RelativeLayout
        android:id="@+id/fileDisplayerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/code_component_background"
        android:elevation="@dimen/elevation"
        android:layout_margin="@dimen/margin">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/fileSelectorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            tools:text="FileName.java"
            android:textSize="@dimen/big_text_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <View
            android:id="@+id/sep1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/fileSelectorSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="?android:colorAccent"/>

        <!-- Layout where actual code is displayed. -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/sep1"
            android:layout_above="@id/fileDisplayerButtonBar"
            android:padding="@dimen/padding">

            <EditText
                android:id="@+id/playgroundCodeArea"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="Formatted code here"
                android:textSize="@dimen/code_text_size"
                android:padding="@dimen/padding"
                android:inputType="textMultiLine|textNoSuggestions"
                android:gravity="top|start"
                android:textColor="@color/code_text_color"
                android:background="@drawable/code_area_background"
                tools:ignore="ScrollViewSize"
                android:importantForAutofill="no"
                android:hint="@string/playground_code_area_hint"
                android:cursorVisible="true"
                android:imeOptions="actionNone"/>

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/fileDisplayerButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/playgroundZoomInButton"
                android:foreground="?selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:contentDescription="@string/zoom_in"
                app:srcCompat="@drawable/zoom_in_icon"/>

            <ImageButton
                android:id="@+id/playgroundZoomOutButton"
                android:foreground="?selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:contentDescription="@string/zoom_out"
                app:srcCompat="@drawable/zoom_out_icon"/>

            <ImageButton
                android:id="@+id/playgroundDeleteButton"
                android:foreground="?selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:contentDescription="@string/playground_delete_file"
                app:srcCompat="@drawable/icon_delete"/>

            <!-- Does clip sync if that is enabled -->
            <ImageButton
                android:id="@+id/playgroundCopyButton"
                android:foreground="?selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:contentDescription="@string/clip_sync"
                app:srcCompat="@drawable/copy_icon"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>