<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playground_create_file_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/fileNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/playground_create_file_hint"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java_file_extension"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/fileNameIncorrectView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/playground_create_file_incorrect"
        android:textColor="@android:color/holo_red_light"
        tools:visibility="visible"/>

</LinearLayout>